it fucking works

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,22 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "it works\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas\n",
-    "msg = \"it works\"\n",
-    "print(msg)"
+    "# Import relevant libraries\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "import pandas as pd\n",
+    "from zipfile import ZipFile\n",
+    "\n",
+    "import mne\n",
+    "import mne_nirs\n",
+    "\n",
+    "from mne_nirs.experimental_design import make_first_level_design_matrix\n",
+    "from mne_nirs.statistics import run_glm\n",
+    "from mne_nirs.channels import (get_long_channels,\n",
+    "                               get_short_channels,\n",
+    "                               picks_pair_to_idx)\n",
+    "from mne.preprocessing.nirs import optical_density, beer_lambert_law\n",
+    "\n",
+    "from nilearn.plotting import plot_design_matrix\n",
+    "\n",
+    "from itertools import compress\n",
+    "from icecream import ic"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
