--- a/preprocessing_analysis.ipynb
+++ b/preprocessing_analysis.ipynb
@@ -516,58 +516,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading /Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NP-Ph2-206-2021-11-18/2021-11-18_001.snirf\n",
-      "Reading 0 ... 7256  =      0.000 ...  1901.798 secs...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ic| 'Interpolate bad channels.'\n",
-      "/var/folders/b0/t62rjb510wb79fxb5ch9n3kc0000gn/T/ipykernel_48652/1748048731.py:16: RuntimeWarning: No bad channels to interpolate. Doing nothing...\n",
-      "ic| 'Apply short channel regression.'\n",
-      "ic| \"Do temporal derivative distribution repair on:\": 'Do temporal derivative distribution repair on:'\n",
-      "    od_corrected: <RawSNIRF | 2021-11-18_001.snirf, 232 x 7257 (1901.8 s), ~13.2 MB, data loaded>\n",
-      "ic| 'Convert to haemoglobin with the modified beer-lambert law.'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filtering raw data in 1 contiguous segment\n",
-      "Setting up band-pass filter from 0.05 - 0.7 Hz\n",
-      "\n",
-      "FIR filter parameters\n",
-      "---------------------\n",
-      "Designing a one-pass, zero-phase, non-causal bandpass filter:\n",
-      "- Windowed time-domain design (firwin) method\n",
-      "- Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation\n",
-      "- Lower passband edge: 0.05\n",
-      "- Lower transition bandwidth: 0.02 Hz (-6 dB cutoff frequency: 0.04 Hz)\n",
-      "- Upper passband edge: 0.70 Hz\n",
-      "- Upper transition bandwidth: 0.20 Hz (-6 dB cutoff frequency: 0.80 Hz)\n",
-      "- Filter length: 631 samples (165.385 sec)\n",
-      "\n",
-      "Used Annotations descriptions: ['1', '11', '43', '44', '45', '46', '47', '48', '49', '50', '51', '52', '53', '54', '55', '56', '57', '58', '59', '60', '61', '62', '63', '64', '65', '66', '67', '68', '69', '70', '71', '72', '73', '74', '75', '76', '77', '78']\n",
-      "[[ 121    0    1]\n",
-      " [ 136    0   31]\n",
-      " [ 155    0   34]\n",
-      " ...\n",
-      " [7114    0    4]\n",
-      " [7137    0    7]\n",
-      " [7148    0   10]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# raw_intensity = read_raw_bids(bids_path=bids_path, verbose=False)\n",
     "\n",
@@ -643,8 +594,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Event investigation\n",
+    "Vi skal kigge på events, for at finde den syge trial. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
@@ -659,13 +618,391 @@
        "       [7148,    0,   10]])"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "events.shape # 385, 3\n",
+    "# et 'raskt' subject har 384, så det tyder på at subject 17 (faktisk 18) har en ekstra trial\n",
     "events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 339,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "385\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "385"
+      ]
+     },
+     "execution_count": 339,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#np.diff(events)\n",
+    "len(np.diff(events))\n",
+    "# de er alle forskellige af navn. men er de forskellige i indhold? (time samples)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 394,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5223,    0,    1]])"
+      ]
+     },
+     "execution_count": 394,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# få noget fra events fra axis 0 (axis 0 = række dimension)\n",
+    "temp = np.diff(events, axis=0)\n",
+    "\n",
+    "#gem fra række 2 og frem, alle kolonner. ved ikke hvorfor vi vil det. vi har så 2 færre rækker\n",
+    "temp2 = temp[2:,:]\n",
+    "\n",
+    "# tjek om alle rækker, første kolonne er lig med 0\n",
+    "tempi = temp2[:,0]==0\n",
+    "# de er alle false\n",
+    "\n",
+    "# andreas please explain\n",
+    "tempi2 = [i for i, x in enumerate(tempi) if x]\n",
+    "\n",
+    "# i don't get it\n",
+    "events[tempi2,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 342,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5098,    0,   11],\n",
+       "       [5107,    0,    1],\n",
+       "       [5123,    0,    3],\n",
+       "       [5145,    0,    6],\n",
+       "       [5158,    0,    9],\n",
+       "       [5223,    0,    1],\n",
+       "       [5231,    0,   32],\n",
+       "       [5250,    0,   24],\n",
+       "       [5250,    0,    2],\n",
+       "       [5261,    0,   38]])"
+      ]
+     },
+     "execution_count": 342,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tjekker omkringliggende trials\n",
+    "events[tempi2[0]-5:tempi2[0]+5,:]\n",
+    "\n",
+    "# time sample 5250 er repeated ! dårligt! den er gal med trigger 2 og trigger 24 (de ligger oveni hinanden)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 382,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5223,    0,    1]])"
+      ]
+     },
+     "execution_count": 382,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events[tempi2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 348,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[279]"
+      ]
+     },
+     "execution_count": 348,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# i alle rækker, tredje kolonne, hvor har vi trigger 2\n",
+    "tempi = events[:,2]==2\n",
+    "[i for i, x in enumerate(tempi) if x]\n",
+    "# vi har kun trigger 2 én gang - dårligt tegn!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 349,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[62, 66, 114, 130, 230, 234, 242, 246, 278]"
+      ]
+     },
+     "execution_count": 349,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# i alle rækker, tredje kolonne, hvor har vi trigger 24\n",
+    "tempi = events[:,2]==24\n",
+    "[i for i, x in enumerate(tempi) if x]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 350,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5250,    0,    2])"
+      ]
+     },
+     "execution_count": 350,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find farisæren\n",
+    "events[tempi2[0]+3,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 374,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 2])"
+      ]
+     },
+     "execution_count": 374,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fjern farisæren - lykkedes ikke\n",
+    "#events[tempi2[0]+3,:] = []\n",
+    "test_del = np.delete(events[tempi2[0]+3], 0) # virker ikke\n",
+    "#tempi2 = np.delete(events, [tempi2[0]+3,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 376,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([121,   0,   1])"
+      ]
+     },
+     "execution_count": 376,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tjek at farisæren er gone\n",
+    "events[test_del[0],:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 352,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(385, 3)"
+      ]
+     },
+     "execution_count": 352,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tjek 384 events - not\n",
+    "events.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5098,    0,   11],\n",
+       "       [5107,    0,    1],\n",
+       "       [5123,    0,    3],\n",
+       "       [5145,    0,    6],\n",
+       "       [5158,    0,    9],\n",
+       "       [5223,    0,    1],\n",
+       "       [5231,    0,   32],\n",
+       "       [5250,    0,   24],\n",
+       "       [5250,    0,    2],\n",
+       "       [5261,    0,   38]])"
+      ]
+     },
+     "execution_count": 353,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tjek om den er gone - no\n",
+    "events[tempi2[0]-5:tempi2[0]+5,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function diff in module numpy:\n",
+      "\n",
+      "diff(a, n=1, axis=-1, prepend=<no value>, append=<no value>)\n",
+      "    Calculate the n-th discrete difference along the given axis.\n",
+      "    \n",
+      "    The first difference is given by ``out[i] = a[i+1] - a[i]`` along\n",
+      "    the given axis, higher differences are calculated by using `diff`\n",
+      "    recursively.\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    a : array_like\n",
+      "        Input array\n",
+      "    n : int, optional\n",
+      "        The number of times values are differenced. If zero, the input\n",
+      "        is returned as-is.\n",
+      "    axis : int, optional\n",
+      "        The axis along which the difference is taken, default is the\n",
+      "        last axis.\n",
+      "    prepend, append : array_like, optional\n",
+      "        Values to prepend or append to `a` along axis prior to\n",
+      "        performing the difference.  Scalar values are expanded to\n",
+      "        arrays with length 1 in the direction of axis and the shape\n",
+      "        of the input array in along all other axes.  Otherwise the\n",
+      "        dimension and shape must match `a` except along axis.\n",
+      "    \n",
+      "        .. versionadded:: 1.16.0\n",
+      "    \n",
+      "    Returns\n",
+      "    -------\n",
+      "    diff : ndarray\n",
+      "        The n-th differences. The shape of the output is the same as `a`\n",
+      "        except along `axis` where the dimension is smaller by `n`. The\n",
+      "        type of the output is the same as the type of the difference\n",
+      "        between any two elements of `a`. This is the same as the type of\n",
+      "        `a` in most cases. A notable exception is `datetime64`, which\n",
+      "        results in a `timedelta64` output array.\n",
+      "    \n",
+      "    See Also\n",
+      "    --------\n",
+      "    gradient, ediff1d, cumsum\n",
+      "    \n",
+      "    Notes\n",
+      "    -----\n",
+      "    Type is preserved for boolean arrays, so the result will contain\n",
+      "    `False` when consecutive elements are the same and `True` when they\n",
+      "    differ.\n",
+      "    \n",
+      "    For unsigned integer arrays, the results will also be unsigned. This\n",
+      "    should not be surprising, as the result is consistent with\n",
+      "    calculating the difference directly:\n",
+      "    \n",
+      "    >>> u8_arr = np.array([1, 0], dtype=np.uint8)\n",
+      "    >>> np.diff(u8_arr)\n",
+      "    array([255], dtype=uint8)\n",
+      "    >>> u8_arr[1,...] - u8_arr[0,...]\n",
+      "    255\n",
+      "    \n",
+      "    If this is not desirable, then the array should be cast to a larger\n",
+      "    integer type first:\n",
+      "    \n",
+      "    >>> i16_arr = u8_arr.astype(np.int16)\n",
+      "    >>> np.diff(i16_arr)\n",
+      "    array([-1], dtype=int16)\n",
+      "    \n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> x = np.array([1, 2, 4, 7, 0])\n",
+      "    >>> np.diff(x)\n",
+      "    array([ 1,  2,  3, -7])\n",
+      "    >>> np.diff(x, n=2)\n",
+      "    array([  1,   1, -10])\n",
+      "    \n",
+      "    >>> x = np.array([[1, 3, 6, 10], [0, 5, 6, 8]])\n",
+      "    >>> np.diff(x)\n",
+      "    array([[2, 3, 4],\n",
+      "           [5, 1, 2]])\n",
+      "    >>> np.diff(x, axis=0)\n",
+      "    array([[-1,  2,  0, -2]])\n",
+      "    \n",
+      "    >>> x = np.arange('1066-10-13', '1066-10-16', dtype=np.datetime64)\n",
+      "    >>> np.diff(x)\n",
+      "    array([1, 1], dtype='timedelta64[D]')\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(np.diff)"
    ]
   },
   {
