--- a/preprocessing_analysis.ipynb
+++ b/preprocessing_analysis.ipynb
@@ -835,23 +835,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([121,   0,   1])"
+       "array([5250,    0,    2])"
       ]
      },
-     "execution_count": 376,
+     "execution_count": 401,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# tjek at farisæren er gone\n",
-    "events[test_del[0],:]"
+    "events[tempi2[0]+3,:]\n",
+    "\n",
+    "#events[test_del,:] # virker ikke"
    ]
   },
   {
