--- a/preprocessing_analysis.ipynb
+++ b/preprocessing_analysis.ipynb
@@ -467,7 +467,6 @@
     "all_evokeds = defaultdict(list)\n",
     "\n",
     "for idx, sub in enumerate(subjects):  \n",
-    "\n",
     "    raw_haemo, epochs = preprocess_only(\n",
     "        sub, idx)\n",
     "\n",
@@ -476,35 +475,7 @@
     "        if condition in ['Auditory', 'Visual']:\n",
     "            print(condition)\n",
     "            print(idx)\n",
-    "            all_evokeds[condition].append(epochs[condition].average())\n",
-    "\n",
-    "\n",
-    "# "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Auditory\n",
-      "Visual\n"
-     ]
-    }
-   ],
-   "source": [
-    "all_evokeds = defaultdict(list)\n",
-    "# Save individual-evoked participant data along with others in all_evokeds\n",
-    "for condition in epochs.event_id:\n",
-    "    #print(val)\n",
-    "    #print(condition)\n",
-    "    if condition in ['Auditory', 'Visual']:\n",
-    "        print(condition)\n",
-    "        all_evokeds[condition].append(epochs[condition].average())\n"
+    "            all_evokeds[condition].append(epochs[condition].average())\n"
    ]
   },
   {
@@ -516,9 +487,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 469,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading /Users/sigridagersnapbomnielsen/Documents/Python/5th_semester/BA_fnirs_code/BA_fNIRS/phase_2_data/NP-Ph2-206-2021-11-18/2021-11-18_001.snirf\n",
+      "Reading 0 ... 7256  =      0.000 ...  1901.798 secs...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ic| 'Interpolate bad channels.'\n",
+      "/var/folders/b0/t62rjb510wb79fxb5ch9n3kc0000gn/T/ipykernel_48652/1748048731.py:16: RuntimeWarning: No bad channels to interpolate. Doing nothing...\n",
+      "ic| 'Apply short channel regression.'\n",
+      "ic| \"Do temporal derivative distribution repair on:\": 'Do temporal derivative distribution repair on:'\n",
+      "    od_corrected: <RawSNIRF | 2021-11-18_001.snirf, 232 x 7257 (1901.8 s), ~13.2 MB, data loaded>\n",
+      "ic| 'Convert to haemoglobin with the modified beer-lambert law.'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtering raw data in 1 contiguous segment\n",
+      "Setting up band-pass filter from 0.05 - 0.7 Hz\n",
+      "\n",
+      "FIR filter parameters\n",
+      "---------------------\n",
+      "Designing a one-pass, zero-phase, non-causal bandpass filter:\n",
+      "- Windowed time-domain design (firwin) method\n",
+      "- Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation\n",
+      "- Lower passband edge: 0.05\n",
+      "- Lower transition bandwidth: 0.02 Hz (-6 dB cutoff frequency: 0.04 Hz)\n",
+      "- Upper passband edge: 0.70 Hz\n",
+      "- Upper transition bandwidth: 0.20 Hz (-6 dB cutoff frequency: 0.80 Hz)\n",
+      "- Filter length: 631 samples (165.385 sec)\n",
+      "\n",
+      "Used Annotations descriptions: ['1', '11', '43', '44', '45', '46', '47', '48', '49', '50', '51', '52', '53', '54', '55', '56', '57', '58', '59', '60', '61', '62', '63', '64', '65', '66', '67', '68', '69', '70', '71', '72', '73', '74', '75', '76', '77', '78']\n",
+      "[[ 121    0    1]\n",
+      " [ 136    0   31]\n",
+      " [ 155    0   34]\n",
+      " ...\n",
+      " [7114    0    4]\n",
+      " [7137    0    7]\n",
+      " [7148    0   10]]\n"
+     ]
+    }
+   ],
    "source": [
     "# raw_intensity = read_raw_bids(bids_path=bids_path, verbose=False)\n",
     "\n",
@@ -603,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 470,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +638,7 @@
        "       [7148,    0,   10]])"
       ]
      },
-     "execution_count": 338,
+     "execution_count": 470,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,23 +651,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 471,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "385\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "385"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 471,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 472,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +682,7 @@
        "array([[5223,    0,    1]])"
       ]
      },
-     "execution_count": 394,
+     "execution_count": 472,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +698,7 @@
     "tempi = temp2[:,0]==0\n",
     "# de er alle false\n",
     "\n",
-    "# andreas please explain\n",
+    "# please explain this \n",
     "tempi2 = [i for i, x in enumerate(tempi) if x]\n",
     "\n",
     "# i don't get it\n",
@@ -694,25 +707,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 474,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[5098,    0,   11],\n",
-       "       [5107,    0,    1],\n",
-       "       [5123,    0,    3],\n",
-       "       [5145,    0,    6],\n",
-       "       [5158,    0,    9],\n",
-       "       [5223,    0,    1],\n",
-       "       [5231,    0,   32],\n",
-       "       [5250,    0,   24],\n",
-       "       [5250,    0,    2],\n",
-       "       [5261,    0,   38]])"
+       "array([], shape=(0, 3), dtype=int64)"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 474,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,27 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[5223,    0,    1]])"
-      ]
-     },
-     "execution_count": 382,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "events[tempi2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 475,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +739,7 @@
        "[279]"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 475,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 476,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +762,7 @@
        "[62, 66, 114, 130, 230, 234, 242, 246, 278]"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 476,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 477,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +784,7 @@
        "array([5250,    0,    2])"
       ]
      },
-     "execution_count": 350,
+     "execution_count": 477,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,76 +796,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 484,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 2])"
-      ]
-     },
-     "execution_count": 374,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# fjern farisæren - lykkedes ikke\n",
     "#events[tempi2[0]+3,:] = []\n",
-    "test_del = np.delete(events[tempi2[0]+3], 0) # virker ikke\n",
-    "#tempi2 = np.delete(events, [tempi2[0]+3,:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 401,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([5250,    0,    2])"
-      ]
-     },
-     "execution_count": 401,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# tjek at farisæren er gone\n",
-    "events[tempi2[0]+3,:]\n",
+    "#test_del = np.delete(events[tempi2], [tempi2[0]+3], 0) # virker ikke, sletter for meget\n",
+    "#tempi2 = np.delete(events, [tempi2[0]+3,:])\n",
+    "#test_del = np.delete(events, tempi+3, 0)\n",
+    "test_del = np.delete(events, tempi2[0]+3, 0)\n",
     "\n",
-    "#events[test_del,:] # virker ikke"
+    "# virker det nu??"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 492,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(385, 3)"
-      ]
-     },
-     "execution_count": 352,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# tjek 384 events - not\n",
-    "events.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 353,
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(384, 3)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -893,118 +833,85 @@
        "       [5223,    0,    1],\n",
        "       [5231,    0,   32],\n",
        "       [5250,    0,   24],\n",
-       "       [5250,    0,    2],\n",
-       "       [5261,    0,   38]])"
+       "       [5261,    0,   38],\n",
+       "       [5270,    0,    1]])"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 492,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# tjek om den er gone - no\n",
-    "events[tempi2[0]-5:tempi2[0]+5,:]"
+    "#print(len(test_del)) # nu er vi nede på 384\n",
+    "print(test_del.shape)\n",
+    "\n",
+    "# tjek at farisæren er gone\n",
+    "test_del[tempi2[0]-5:tempi2[0]+5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Function: Fixing events for sub 18"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 493,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fix_events(sub_17):\n",
+    "    # få noget fra events fra axis 0 (axis 0 = række dimension)\n",
+    "    temp = np.diff(events, axis=0)\n",
+    "\n",
+    "    #gem fra række 2 og frem, alle kolonner. ved ikke hvorfor vi vil det. vi har så 2 færre rækker\n",
+    "    temp2 = temp[2:,:]\n",
+    "\n",
+    "    # tjek om alle rækker, første kolonne er lig med 0\n",
+    "    tempi = temp2[:,0]==0\n",
+    "    # de er alle false\n",
+    "\n",
+    "    # please explain this \n",
+    "    tempi2 = [i for i, x in enumerate(tempi) if x]\n",
+    "\n",
+    "    # i don't get it\n",
+    "    events[tempi2,:]\n",
+    "\n",
+    "    #delete the bad trial\n",
+    "    events = np.delete(events, tempi2[0]+3, 0)\n",
+    "\n",
+    "    #check that it's gone\n",
+    "    ic(\"Checking that it's gone\")\n",
+    "    events[tempi2[0]-5:tempi2[0]+5]\n",
+    "\n",
+    "    return (events)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 494,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function diff in module numpy:\n",
-      "\n",
-      "diff(a, n=1, axis=-1, prepend=<no value>, append=<no value>)\n",
-      "    Calculate the n-th discrete difference along the given axis.\n",
-      "    \n",
-      "    The first difference is given by ``out[i] = a[i+1] - a[i]`` along\n",
-      "    the given axis, higher differences are calculated by using `diff`\n",
-      "    recursively.\n",
-      "    \n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    a : array_like\n",
-      "        Input array\n",
-      "    n : int, optional\n",
-      "        The number of times values are differenced. If zero, the input\n",
-      "        is returned as-is.\n",
-      "    axis : int, optional\n",
-      "        The axis along which the difference is taken, default is the\n",
-      "        last axis.\n",
-      "    prepend, append : array_like, optional\n",
-      "        Values to prepend or append to `a` along axis prior to\n",
-      "        performing the difference.  Scalar values are expanded to\n",
-      "        arrays with length 1 in the direction of axis and the shape\n",
-      "        of the input array in along all other axes.  Otherwise the\n",
-      "        dimension and shape must match `a` except along axis.\n",
-      "    \n",
-      "        .. versionadded:: 1.16.0\n",
-      "    \n",
-      "    Returns\n",
-      "    -------\n",
-      "    diff : ndarray\n",
-      "        The n-th differences. The shape of the output is the same as `a`\n",
-      "        except along `axis` where the dimension is smaller by `n`. The\n",
-      "        type of the output is the same as the type of the difference\n",
-      "        between any two elements of `a`. This is the same as the type of\n",
-      "        `a` in most cases. A notable exception is `datetime64`, which\n",
-      "        results in a `timedelta64` output array.\n",
-      "    \n",
-      "    See Also\n",
-      "    --------\n",
-      "    gradient, ediff1d, cumsum\n",
-      "    \n",
-      "    Notes\n",
-      "    -----\n",
-      "    Type is preserved for boolean arrays, so the result will contain\n",
-      "    `False` when consecutive elements are the same and `True` when they\n",
-      "    differ.\n",
-      "    \n",
-      "    For unsigned integer arrays, the results will also be unsigned. This\n",
-      "    should not be surprising, as the result is consistent with\n",
-      "    calculating the difference directly:\n",
-      "    \n",
-      "    >>> u8_arr = np.array([1, 0], dtype=np.uint8)\n",
-      "    >>> np.diff(u8_arr)\n",
-      "    array([255], dtype=uint8)\n",
-      "    >>> u8_arr[1,...] - u8_arr[0,...]\n",
-      "    255\n",
-      "    \n",
-      "    If this is not desirable, then the array should be cast to a larger\n",
-      "    integer type first:\n",
-      "    \n",
-      "    >>> i16_arr = u8_arr.astype(np.int16)\n",
-      "    >>> np.diff(i16_arr)\n",
-      "    array([-1], dtype=int16)\n",
-      "    \n",
-      "    Examples\n",
-      "    --------\n",
-      "    >>> x = np.array([1, 2, 4, 7, 0])\n",
-      "    >>> np.diff(x)\n",
-      "    array([ 1,  2,  3, -7])\n",
-      "    >>> np.diff(x, n=2)\n",
-      "    array([  1,   1, -10])\n",
-      "    \n",
-      "    >>> x = np.array([[1, 3, 6, 10], [0, 5, 6, 8]])\n",
-      "    >>> np.diff(x)\n",
-      "    array([[2, 3, 4],\n",
-      "           [5, 1, 2]])\n",
-      "    >>> np.diff(x, axis=0)\n",
-      "    array([[-1,  2,  0, -2]])\n",
-      "    \n",
-      "    >>> x = np.arange('1066-10-13', '1066-10-16', dtype=np.datetime64)\n",
-      "    >>> np.diff(x)\n",
-      "    array([1, 1], dtype='timedelta64[D]')\n",
-      "\n"
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'events' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/b0/t62rjb510wb79fxb5ch9n3kc0000gn/T/ipykernel_48652/3313967450.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#test function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfix_events\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubjects\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m17\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/b0/t62rjb510wb79fxb5ch9n3kc0000gn/T/ipykernel_48652/1518403838.py\u001b[0m in \u001b[0;36mfix_events\u001b[0;34m(sub_17)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mfix_events\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msub_17\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;31m# få noget fra events fra axis 0 (axis 0 = række dimension)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mtemp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mevents\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m#gem fra række 2 og frem, alle kolonner. ved ikke hvorfor vi vil det. vi har så 2 færre rækker\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'events' referenced before assignment"
      ]
     }
    ],
    "source": [
-    "help(np.diff)"
+    "#test function\n",
+    "test = fix_events(subjects[17])\n",
+    "test"
    ]
   },
   {
