updated func, no work

--- a/preprocessing_analysis.ipynb
+++ b/preprocessing_analysis.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 546,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 556,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 548,
    "metadata": {},
    "outputs": [
     {
@@ -1020,38 +1020,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 553,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fix_events(sub_17_events):\n",
+    "def fix_events(sub17):\n",
     "    # få noget fra events fra axis 0 (axis 0 = række dimension)\n",
-    "    temp = np.diff(sub_17_events, axis=0)\n",
+    "    #temp = np.diff(events, axis=0)\n",
+    "    temp = np.diff(sub17, axis=0)\n",
     "\n",
-    "    #gem fra række 2 og frem, alle kolonner. ved ikke hvorfor vi vil det. vi har så 2 færre rækker\n",
-    "    temp2 = temp[2:,:]\n",
+    "    # GLEM temp2!!! Sorry!\n",
     "\n",
     "    # tjek om alle rækker, første kolonne er lig med 0\n",
-    "    tempi = temp2[:,0]==0\n",
+    "    tempi = temp[:,0]==0\n",
     "    # de er alle false\n",
+    "    # nej, det er de ikke ;)\n",
     "\n",
     "    # please explain this \n",
     "    tempi2 = [i for i, x in enumerate(tempi) if x]\n",
+    "    # list comprehension - forklarer det lige om lidt (ca. 20 min)\n",
+    "\n",
+    "    # i don't get it\n",
+    "    sub17[tempi2[0],:]\n",
     "\n",
     "    #delete the bad trial\n",
-    "    sub_17_events = np.delete(sub_17_events, tempi2[0]+3, 0)\n",
+    "    sub17_clean = np.delete(sub17, tempi2[0]+1, 0)\n",
     "\n",
     "    #check that it's gone\n",
     "    ic(\"Checking that it's gone\")\n",
-    "    sub_17_events[tempi2[0]-5:tempi2[0]+5]\n",
-    "    print(sub_17_events.shape)\n",
-    "    \n",
-    "    return (sub_17_events, shape)"
+    "    sub17[tempi2[0]-5:tempi2[0]+5]\n",
+    "    sub17_clean[tempi2[0]-5:tempi2[0]+5]\n",
+    "\n",
+    "    return sub17_clean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 555,
    "metadata": {},
    "outputs": [
     {
@@ -1065,27 +1070,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(384, 3)\n"
+      "[[ 121    0    1]\n",
+      " [ 136    0   31]\n",
+      " [ 155    0   34]\n",
+      " ...\n",
+      " [7114    0    4]\n",
+      " [7137    0    7]\n",
+      " [7148    0   10]]\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'shape' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/b0/t62rjb510wb79fxb5ch9n3kc0000gn/T/ipykernel_48652/4063466024.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#test function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfix_events\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mevents\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/b0/t62rjb510wb79fxb5ch9n3kc0000gn/T/ipykernel_48652/3264146202.py\u001b[0m in \u001b[0;36mfix_events\u001b[0;34m(sub_17_events)\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msub_17_events\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msub_17_events\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'shape' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "(384, 3)"
+      ]
+     },
+     "execution_count": 555,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#test function\n",
-    "test, shape = fix_events(events)\n",
+    "test = fix_events(events)\n",
     "print(test)\n",
-    "print(shape)\n"
+    "\n",
+    "test.shape\n"
    ]
   },
   {
