--- a/preprocessing_analysis.ipynb
+++ b/preprocessing_analysis.ipynb
@@ -296,7 +296,7 @@
     "                            '63': 'Auditory/pos'})\n",
     "\n",
     "    \n",
-    "    raw_haemo, epochs = preprocess(raw_intensity, idx)\n",
+    "    raw_haemo, epochs = preprocess(raw_intensity)\n",
     "\n",
     "    # plot\n",
     "    fig, axes = plt.subplots(nrows=2, ncols=4, figsize=(9, 5),\n",
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 563,
+   "execution_count": 564,
    "metadata": {},
    "outputs": [
     {
