--- a/preprocessing_analysis.ipynb
+++ b/preprocessing_analysis.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 570,
+   "execution_count": 581,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,6 +189,7 @@
     "    ################################################################################ ANDREAS LOOK HERE\n",
     "    # fixing bad trial for subject 18 (list no 17) specifically\n",
     "    if idx == 17:\n",
+    "        print('hullabalu')\n",
     "        new_events, shape = fix_events(events)\n",
     "        events = new_events.copy()\n",
     "\n",
@@ -466,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 573,
+   "execution_count": 576,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 578,
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 582,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,19 +1041,21 @@
     "    sub17[tempi2[0],:]\n",
     "\n",
     "    #delete the bad trial\n",
-    "    sub17_clean = np.delete(sub17, tempi2[0]+1, 0)\n",
+    "    sub17_clean = np.delete(sub17, tempi2[0], 0) # uden +1\n",
     "\n",
     "    #check that it's gone\n",
     "    ic(\"Checking that it's gone\")\n",
-    "    sub17[tempi2[0]-5:tempi2[0]+5]\n",
-    "    sub17_clean[tempi2[0]-5:tempi2[0]+5]\n",
+    "    print(sub17[tempi2[0]-5:tempi2[0]+5])\n",
+    "    print(sub17_clean[tempi2[0]-5:tempi2[0]+5])\n",
     "\n",
-    "    return sub17_clean"
+    "    shape = sub17_clean.shape\n",
+    "\n",
+    "    return sub17_clean, shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 584,
    "metadata": {},
    "outputs": [
     {
@@ -1066,13 +1069,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[5123    0    3]\n",
+      " [5145    0    6]\n",
+      " [5158    0    9]\n",
+      " [5223    0    1]\n",
+      " [5231    0   32]\n",
+      " [5250    0   24]\n",
+      " [5250    0    2]\n",
+      " [5261    0   38]\n",
+      " [5270    0    1]\n",
+      " [5285    0   30]]\n",
+      "[[5123    0    3]\n",
+      " [5145    0    6]\n",
+      " [5158    0    9]\n",
+      " [5223    0    1]\n",
+      " [5231    0   32]\n",
+      " [5250    0    2]\n",
+      " [5261    0   38]\n",
+      " [5270    0    1]\n",
+      " [5285    0   30]\n",
+      " [5304    0   33]]\n",
       "[[ 121    0    1]\n",
       " [ 136    0   31]\n",
       " [ 155    0   34]\n",
       " ...\n",
       " [7114    0    4]\n",
       " [7137    0    7]\n",
-      " [7148    0   10]]\n"
+      " [7148    0   10]]\n",
+      "(384, 3)\n"
      ]
     },
     {
@@ -1081,16 +1105,16 @@
        "(384, 3)"
       ]
      },
-     "execution_count": 555,
+     "execution_count": 584,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#test function\n",
-    "test = fix_events(events)\n",
+    "test, shape_test = fix_events(events)\n",
     "print(test)\n",
-    "\n",
+    "print(shape_test)\n",
     "test.shape\n"
    ]
   },
@@ -1124,9 +1148,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "# epoch grand average plot"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
